@@ -1,3 +1,8 @@
+2001-12-01  Olivier Hainque <hainque@act-europe.fr>
+
+	* unroll.c (loop_iterations): Give up on jumps with null JUMP_LABEL
+	while scanning for multiple back edges.
+
 2001-12-01  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* ginclude/ppc-asm.h (JUMP_TARGET): New macro.
